syntax = "proto3";

package ProcessWithCloudEvents.Grpc.Contract;
option csharp_namespace = "ProcessWithCloudEvents.Grpc.Contract";

service GrpcTeacherStudentInteraction {
    rpc StartProcess (ProcessDetails) returns (ProcessDetails);
    rpc RequestStudentAgentResponse (MessageContent) returns (MessageContent);
    rpc ReceiveStudentAgentResponse (ProcessDetails) returns (stream MessageContent);
    rpc PublishStudentAgentResponseFromProcess (MessageContent) returns (MessageContent);
}
  
enum User {  
    STUDENT = 0;  
    TEACHER = 1;  
}

message MessageContent { 
    User user = 1;
    string content = 2;
    string processId = 10;
}

message ProcessDetails {
    string processId = 1;
}